--- a/packages/void-ui/src/components/layout/flexbox/flexbox.scss
+++ b/packages/void-ui/src/components/layout/flexbox/flexbox.scss
@@ -3,15 +3,21 @@
  */
 @include comp('flexbox') {
   position: relative;
+
+  border: none;
+  padding: 0;
+  margin: 0;
+
+  min-width: 0;
+  min-height: 0;
+
+  flex: 1 1;
+
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
   align-items: flex-start;
   justify-content: flex-start;
-  flex: 1;
-
-  padding: 0;
-  margin: 0;
 
   color: inherit;
   text-decoration: none;
@@ -95,6 +101,9 @@
       @include when('gap') {
         margin: 0;
         padding: 0;
+
+        max-width: 100%;
+        max-height: 100%;
       }
     }
   }
@@ -112,6 +121,9 @@
         &.#{class-prop('gap', $gap)} {
           margin: 0;
           padding: 0;
+
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
@@ -132,7 +144,7 @@
   }
 
   @include when('percentage') {
-    flex: 1 0 100%;
+    flex: 1 1 100%;
   }
 
   @include when('hidden') {
